--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "csv-parse": "^5.4.0",
     "express": "^4.18.2"
   }
 }
